--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.10.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.477.0",
+    "lucide-vue-next": "^0.477.0",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "tailwind-merge": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.18.1",
+    "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@types/node": "^22.13.9",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.1.10"
   }
